# SiteSage

./: .env  .env.sample  .gitignore  .gitmodules  LICENSE  README.md  TODO.md  example_google_maps.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
agents/: competitor_analysis.py
data/: dianping_collection_data.csv
docs/: AMAP_API.md  API.md  Amap-cls-description.csv  DESIGN.md  INSTALLATION.md  SigeSage - Progress Report.docx  TROUBLESHOOTING.md  draw_comp.py  draw_comp.sh  failure_example.txt  final_result_recording.md
docs/ProgressReport/: 01_customer_report.md  02_traffic_report.md  05_evaluation.md  06_final_report.md  compare_results.py  dianping_collection_manner.csv  draw.py  result-nov16.csv
docs/sample_run/: 03_competition_report.md  04_weighting.md  dianping_collection_arabica.csv  dianping_collection_starbucks.csv
map_apis/: amap.py  map_api.py  type_projection.py
map_apis/google_api_utils/: fetch_places.ipynb
rubrics/: competition_rubric.md  customer_rubric.md  traffic_rubric.md  weighting_rubric.md
src/: evaluate copy 2.ipynb  evaluate.ipynb  sitesage_backend.py  sitesage_frontend.py
src/data/: Amap-cls-description.csv  average_calc.py  dianping_collection_data.csv
src/frontend/: index.html
src/map_apis/: __init__.py  amap.py  data_types.py  google_maps.py  map_api.py  type_projection.py
tests/: temp.json  test_agent-lyw.ipynb  test_competitor_agent.ipynb  test_map_tools.ipynb  test_sitesage-lyw.ipynb  test_worldpop_tool.ipynb
tools/: demographics_rt.py  map.py  map_rt.py
worldpop_apis/: demographics.py
(+396 files in other folders)
